# KarabinerPyX

./: .gitignore  .pre-commit-config.yaml  ADVANCED_CHEAT_SHEET.md  AGENTS.md  CHEAT_SHEET.md  KarabinerPyX.ipynb  MIGRATION.md  PERSONAL_CHEAT_SHEET.md  PRD.md  PRESETS_CHEAT_SHEET.md  README.md  README.zh.md  justfile  karabiner.json  karabiner_demo.json  karabiner_goku.json  pyproject.toml  requirements.md
.github/workflows/: ci.yml
examples/: advanced_config.py  demo.py  goku_reproduction.py  intent_advanced.py  intent_migration_golden.py  intent_quickstart.py  my_personal_config.py  presets_usage.py
src/karabinerpyx/: __init__.py  analytics.py  cli.py  cli_commands.py  cli_types.py  compiler.py  deploy.py  docs.py  intent.py  keys.py  layer.py  models.py  service.py  templates.py  validate.py
src/karabinerpyx/presets/: __init__.py  hyper.py  navigation.py  system.py
tests/: conftest.py  test_advanced_features.py  test_analytics.py  test_analytics_report.py  test_backup_management.py  test_cli.py  test_cli_branches.py  test_complex_scenarios.py  test_deploy.py  test_docs.py  test_integration.py  test_intent.py  test_layer.py  test_models.py  test_presets.py  test_service.py  test_service_extra.py  test_templates.py  test_validate.py
