[project]
name = "karabinerpyx"
version = "0.2.0"
description = "A Python DSL for declarative, safe, and powerful Karabiner-Elements configuration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "KarabinerPyX Authors" }
]
keywords = ["karabiner", "keyboard", "macos", "dsl", "configuration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = []

[project.scripts]
kpyx = "karabinerpyx.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.11.0",
]
watch = [
    "watchfiles>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/karabinerpyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 14

[tool.mypy]
python_version = "3.10"
files = ["src/karabinerpyx"]
pretty = true
show_error_codes = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["karabinerpyx.docs", "karabinerpyx.analytics"]
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["watchfiles", "watchfiles.*"]
ignore_missing_imports = true
